tests/negative/missing_import.far
import nonexistent_module_xyz

fun main() {
  return 0
}
